--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <!-- Business 2 -->
     <div class="business">
-      <h1>Premium Pools &amp; Spas of Charlotte</h1>
+      <h1>Premium Pools &amp; Spas of<br> Charlotte</h1>
       <div class="phone">
         <img src="./resources/images/phone-icon-mobile.png">
         <span id="tap">Tap to call</span>
