--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
       <span class="ss-location"><a href="#">FIND A PRO</a></span>
       <img id="mobile-menu" src="./resources/images/menu-icon-mobile.png">
     </nav>
+    <div class="nav">
+      <nav class="desktop-nav">
+        <img id="pool-logo" src="./resources/images/pool-pros-logo.png">
+        <div class="menu">
+          <ul class="main-nav">
+            <li><a href="#">Pools &amp; Spas</a></li>
+            <li><a href="#">Supplies</a></li>
+            <li><a href="#">Resources</a></li>
+            <li id="sign-in"><a href="#">Services</a></li>
+            <li><span class="ss-location"><a href="#">Find a Pool Pro</a></span></li>
+          </ul>
+      </nav>
+    </div>
     <div class="banner">
       <img src="./resources/images/water-image.png">
     </div>
@@ -30,7 +43,8 @@
   <section class="filters">
     <div class="filter-head">
       <span id="filter-result">7 dealers in 28226</span>
-      <span class="filter">Filter Results &#x25BE;</span>
+      <span class="filter mobile-filter">Filter Results &#x25BE;</span>
+      <span class="filter desktop-filter">Filter Results</span>
     </div>
     <div class="filter-form">
       <form>
@@ -45,12 +59,15 @@
   <!-- Main Section Results -->
   <main>
     <!-- Business 1 -->
-    <div class="business">
-      <h1>Aqua Experts</h1>
-      <div class="phone">
+    <div class="business last">
+      <h1>Aqua Experts</h1><br>
+      <div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
         <span id="tap">Tap to call</span>
         <span id="number">1.888.888.8888</span>
+      </div>
+      <div class="desktop-phone phone">
+        <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
       <div class="contact">
@@ -64,28 +81,35 @@
         <p>Sundays - CLOSED</p>
       </div>
       <div class="services">
-        <div class="service">
-          <img src="./resources/images/star-installation-pro.png">
-          <span>Installation Pro</span>
+        <div class="service-one">
+          <div class="service">
+            <span><img src="./resources/images/star-installation-pro.png" align="middle"> Installation Pro</span>
+          </div>
+          <div class="service">
+            <span><img src="./resources/images/users-commercial-pro.png" align="middle"> Commercial Pro</span>
+          </div>
         </div>
-        <div class="service">
-          <img src="./resources/images/gear-service-pro.png">
-          <span>Service Pro</span>
-        </div>
-        <div class="service">
-          <img src="./resources/images/home-residential-pro.png">
-          <span>Residential Pro</span>
+        <div>
+          <div class="service">
+            <span><img src="./resources/images/home-residential-pro.png" align="middle"> Residential Pro</span>
+          </div>
+          <div class="service">
+            <span class="hidden"><img src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
+          </div>
         </div>
       </div>
     </div>
 
     <!-- Business 2 -->
-    <div class="business">
+    <div class="business middle">
       <h1>Premium Pools &amp; Spas of<br> Charlotte</h1>
-      <div class="phone">
+      <div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
         <span id="tap">Tap to call</span>
         <span id="number">1.888.888.8888</span>
+      </div>
+      <div class="desktop-phone phone">
+        <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
       <div class="contact">
@@ -99,32 +123,36 @@
         <p>Sundays - On Call</p>
       </div>
       <div class="services">
-        <div class="service">
-          <img src="./resources/images/star-installation-pro.png">
-          <span>Installation Pro</span>
+        <div class="service-one">
+          <div class="service">
+            <span><img src="./resources/images/star-installation-pro.png" align="middle"> Installation Pro</span>
+          </div>
+          <div class="service">
+            <span><img src="./resources/images/users-commercial-pro.png" align="middle"> Commercial Pro</span>
+          </div>
         </div>
-        <div class="service">
-          <img src="./resources/images/users-commercial-pro.png">
-          <span>Commercial Pro</span>
+        <div>
+          <div class="service">
+            <span><img src="./resources/images/home-residential-pro.png" align="middle"> Residential Pro</span>
+          </div>
+          <div class="service">
+            <span><img src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
+          </div>
         </div>
-        <div class="service">
-          <img src="./resources/images/home-residential-pro.png">
-          <span>Residential Pro</span>
-        </div>
-        <div class="service">
-          <img src="./resources/images/gear-service-pro.png">
-          <span>Service Pro</span>
-        </div>
+      </div>
       </div>
     </div>
 
     <!-- Business 3 -->
     <div class="business last">
-      <h1>Carolina Pool Specialists</h1>
-      <div class="phone">
+      <h1>Carolina Pool Specialists</h1><br>
+      <div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
         <span id="tap">Tap to call</span>
         <span id="number">1.888.888.8888</span>
+      </div>
+      <div class="desktop-phone phone">
+        <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
       <div class="contact">
@@ -138,21 +166,21 @@
         <p>Sundays 7:00am - 3:00pm</p>
       </div>
       <div class="services">
-        <div class="service">
-          <img src="./resources/images/star-installation-pro.png">
-          <span>Installation Pro</span>
+        <div class="service-one">
+          <div class="service">
+            <span><img src="./resources/images/star-installation-pro.png" align="middle"> Installation Pro</span>
+          </div>
+          <div class="service">
+            <span><img src="./resources/images/users-commercial-pro.png" align="middle"> Commercial Pro</span>
+          </div>
         </div>
-        <div class="service">
-          <img src="./resources/images/users-commercial-pro.png">
-          <span>Commercial Pro</span>
-        </div>
-        <div class="service">
-          <img src="./resources/images/home-residential-pro.png">
-          <span>Residential Pro</span>
-        </div>
-        <div class="service">
-          <img src="./resources/images/gear-service-pro.png">
-          <span>Service Pro</span>
+        <div>
+          <div class="service">
+            <span><img src="./resources/images/home-residential-pro.png" align="middle"> Residential Pro</span>
+          </div>
+          <div class="service">
+            <span><img src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
+          </div>
         </div>
       </div>
     </div>
@@ -172,7 +200,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p id="p-border">Dealers and Distrubutors | Commercial Service</p>
+      <p class="mobile-footer-text" id="p-border">Dealers and Distrubutors | Commercial Service</p>
       <p>2017 Pool Pros | Privacy Policy | Terms and Conditions</p>
     </div>
     <div>
