--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
   <!-- Fonts -->
   <link href="./resources/webfonts/ss-pika.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,800" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
