--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       <span class="ss-location"><a href="#">FIND A PRO</a></span>
       <img id="mobile-menu" src="./resources/images/menu-icon-mobile.png">
     </nav>
+    <div class="desktop-top">
+      <div class="desktop-top contain">
+        <ul>
+          <li>Dealers and Distributors</li>
+          <li>Commercial Service</li>
+        </ul>
+      </div>
+    </div>
     <div class="nav">
       <nav class="desktop-nav">
         <img id="pool-logo" src="./resources/images/pool-pros-logo.png">
