--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- Main Section Results -->
   <main>
     <!-- Business 1 -->
-    <div class="business last">
+    <div class="business busy">
       <h1>Aqua Experts</h1><br>
       <div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
@@ -153,7 +153,7 @@
     </div>
 
     <!-- Business 3 -->
-    <div class="business last">
+    <div class="business last busy">
       <h1>Carolina Pool Specialists</h1><br>
       <div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
@@ -166,7 +166,7 @@
       <p class="talk">Can't talk now? Click below to send an email.</p>
       <div class="contact">
         <img src="./resources/images/email-icon.png">
-        <a href="#"><span>Contact this Pro</span></a>
+        <a id="myBtn" href="#"><span>Contact this Pro</span></a>
       </div>
       <div class="contact-info">
         <h2>Business Hours</h2>
@@ -195,6 +195,42 @@
     </div>
   </main>
 
+  <!-- Trigger/Open The Modal -->
+  <button id="myBtn">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+    <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <div class="modal-title">
+      <p>EMAIL</p>
+      <h1>Premium Pools &amp; Spas of Charlotte</h1>
+    </div>
+    <form class="modal-form">
+      <legend><p id="contact">Fill out the form below and Premium Pools<br> &amp; Spas will get in touch.</p></legend>
+      <fieldset>
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="user_name">
+
+        <label for="">Phone Number</label>
+        <input type="" id="" name="">
+
+        <label for="mail">Email Address</label>
+        <input type="email" id="mail" name="user_email">
+        
+        <label for="">Comments or questions</label>
+        <textarea id="comment" name="user_comment"></textarea>
+        <div class="question-section">
+          <p class="newsletter">Do you currently own a pool or spa?</p>
+          <input type="radio" id="question" value="answer_question" name="user_answer"><label class="light" for="news">Yes</label><br>
+          <input type="radio" id="question" value="answer_question" name="user_answer"><label class="light" for="news">No</label><br>
+        </div>
+      </fieldset>
+    </form>
+  </div>
+</div>
+
   <!-- Footer Section -->
   <footer>
     <div class="footer-top">
@@ -218,6 +254,7 @@
   </footer>
 
   <!-- JavaScripts -->
+  <script src="./resources/js/custom.js"></script>
   <script src="./resources/js/ss-pika.js"></script>
 </body>
 </html>
