--- a/index.html
+++ b/index.html
@@ -213,11 +213,13 @@
         <label for="name">Full Name</label>
         <input type="text" id="name" name="user_name">
 
-        <label for="">Phone Number</label>
-        <input type="" id="" name="">
+        <label for="number">Phone Number</label>
+        <input type="number" id="number" name="user_number">
 
         <label for="mail">Email Address</label>
         <input type="email" id="mail" name="user_email">
+      </fieldset>
+      <fieldset>
         
         <label for="">Comments or questions</label>
         <textarea id="comment" name="user_comment"></textarea>
