--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="mobile-nav">
       <img id="pool-logo" src="./resources/images/pool-pros-logo.png">
       <span class="ss-location"><a href="#">FIND A PRO</a></span>
-      <img id="mobile-menu" src="./resources/images/menu-icon-mobile.png">
+      <a class="mobile-menu" href="#"><img id="mobile-menu" src="./resources/images/menu-icon-mobile.png"></a>
     </nav>
     <div class="desktop-top">
       <div class="desktop-top contain">
@@ -202,10 +202,10 @@
     <span class="close">&times;</span>
     <div class="modal-title">
       <p>EMAIL</p>
-      <h1 id="title">Aqua Experts</h1>
+      <h1 id="title">Pool Pros</h1>
     </div>
     <form class="modal-form">
-      <legend><p id="contact">Fill out the form below and Premium Pools<br> &amp; Spas will get in touch.</p></legend>
+      <legend><p id="contact">Fill out the form below and a Pool Pro will get in touch.</p></legend>
       <fieldset>
         <label for="name">Full Name</label>
         <input type="text" id="name" name="user_name">
@@ -233,6 +233,7 @@
   </div>
 </div>
 
+
   <!-- Footer Section -->
   <footer>
     <div class="footer-top">
@@ -257,9 +258,8 @@
 
   <!-- JavaScripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>
+  <script src="./resources/js/plugin.js"></script>
   <script src="./resources/js/custom-one.js"></script>
-  <script src="./resources/js/custom-two.js"></script>
-
   <script src="./resources/js/ss-pika.js"></script>
 </body>
 </html>
