--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       <img id="pool-logo" src="./resources/images/pool-pros-logo.png">
       <span class="ss-location"><a href="#">FIND A PRO</a></span>
       <a class="mobile-menu" href="#"><img id="mobile-menu" src="./resources/images/menu-icon-mobile.png"></a>
+      <div class="mobile-nav-list-wrapper">
+        <a href="#" id="mobile-nav-list-close" class="mobile-nav-list-close">X</a>
+        <h3 class="mobile-nav-list-title">MENU</h3>
+        <ul class="mobile-nav-list">
+          <li><a href="#">Pools &amp; Spas</a></li>
+          <li><a href="#">Supplies</a></li>
+          <li><a href="#">Resources</a></li>
+          <li id="sign-in"><a href="#">Services</a></li>
+        </ul>
+      </div>
     </nav>
     <div class="desktop-top">
       <div class="desktop-top contain">
@@ -257,7 +267,7 @@
   </footer>
 
   <!-- JavaScripts -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>
+  <script src="./resources/js/jquery-2.1.4.min.js"></script>
   <script src="./resources/js/plugin.js"></script>
   <script src="./resources/js/custom-one.js"></script>
   <script src="./resources/js/ss-pika.js"></script>
