more mobile updates

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <form class="modal-form">
       <legend><p id="contact">Fill out the form below and a Pool Pro will get in touch.</p></legend>
       <fieldset>
-        <label for="name">Full Name</label>
+        <label for="name">First and last name</label>
         <input type="text" id="name" name="user_name">
 
         <label for="number">Phone Number</label>
