--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="mobile-nav">
       <img id="pool-logo" src="./resources/images/pool-pros-logo.png">
       <span class="ss-location"><a href="#">FIND A PRO</a></span>
-      <a class="mobile-menu" href="#"><img id="mobile-menu" src="./resources/images/menu-icon-mobile.png"></a>
+      <a class="mobile-menu" href="#"><img id="mobile-menu-button" src="./resources/images/menu-icon-mobile.png"></a>
       <div class="mobile-nav-list-wrapper">
         <a href="#" id="mobile-nav-list-close" class="mobile-nav-list-close">X</a>
         <h3 class="mobile-nav-list-title">MENU</h3>
