updated click to call

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
     <!-- Business 1 -->
     <div class="business busy">
       <h1>Aqua Experts</h1><br>
-      <div class="mobile-phone phone">
+      <a class="click-to-call" href="tel:+1-888-888-8888"><div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
         <span id="tap">Tap to call</span>
         <span id="number">1.888.888.8888</span>
-      </div>
+      </div></a>
       <div class="desktop-phone phone">
         <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
       <div class="contact">
         <img src="./resources/images/email-icon.png">
-        <a id="myBtn" href="#"><span>Contact this Pro</span></a>
+        <a class="email-button" id="myBtn" href="#"><span>Contact this Pro</span></a>
       </div>
       <div class="contact-info">
         <h2>Business Hours</h2>
@@ -122,18 +122,18 @@
     <!-- Business 2 -->
     <div class="business middle">
       <h1>Premium Pools &amp; Spas of<br> Charlotte</h1>
-      <div class="mobile-phone phone">
+      <a class="click-to-call" href="tel:+1-888-888-8888"><div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
         <span id="tap">Tap to call</span>
         <span id="number">1.888.888.8888</span>
-      </div>
+      </div></a>
       <div class="desktop-phone phone">
         <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
       <div class="contact">
         <img src="./resources/images/email-icon.png">
-        <a id="myBtntwo" href="#"><span>Contact this Pro</span></a>
+        <a class="email-button" id="myBtntwo" href="#"><span>Contact this Pro</span></a>
       </div>
       <div class="contact-info">
         <h2>Business Hours</h2>
@@ -165,18 +165,18 @@
     <!-- Business 3 -->
     <div class="business last busy">
       <h1>Carolina Pool Specialists</h1><br>
-      <div class="mobile-phone phone">
+      <a class="click-to-call" href="tel:+1-888-888-8888"><div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
         <span id="tap">Tap to call</span>
         <span id="number">1.888.888.8888</span>
-      </div>
+      </div></a>
       <div class="desktop-phone phone">
         <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
       <div class="contact">
         <img src="./resources/images/email-icon.png">
-        <a id="myBtnthree" href="#"><span>Contact this Pro</span></a>
+        <a class="email-button" id="myBtnthree" href="#"><span>Contact this Pro</span></a>
       </div>
       <div class="contact-info">
         <h2>Business Hours</h2>
