updated button click

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
-      <div class="contact">
+      <a class="email-button" id="myBtn" href="#"><div class="contact">
         <img src="./resources/images/email-icon.png">
-        <a class="email-button" id="myBtn" href="#"><span>Contact this Pro</span></a>
-      </div>
+        <span>Contact this Pro</span>
+      </div></a>
       <div class="contact-info">
         <h2>Business Hours</h2>
         <p>Weekdays 7:00am - 7:00pm</p>
@@ -131,10 +131,10 @@
         <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
-      <div class="contact">
+      <a class="email-button" id="myBtntwo" href="#"><div class="contact">
         <img src="./resources/images/email-icon.png">
-        <a class="email-button" id="myBtntwo" href="#"><span>Contact this Pro</span></a>
-      </div>
+        <span>Contact this Pro</span>
+      </div></a>
       <div class="contact-info">
         <h2>Business Hours</h2>
         <p>Weekdays 7:00am - 7:00pm</p>
@@ -174,10 +174,10 @@
         <span id="number"><img src="./resources/images/phone-icon-desktop.png" align="middle"> 1.888.888.8888</span>
       </div>
       <p class="talk">Can't talk now? Click below to send an email.</p>
-      <div class="contact">
+      <a class="email-button" id="myBtnthree" href="#"><div class="contact">
         <img src="./resources/images/email-icon.png">
-        <a class="email-button" id="myBtnthree" href="#"><span>Contact this Pro</span></a>
-      </div>
+        <span>Contact this Pro</span>
+      </div></a>
       <div class="contact-info">
         <h2>Business Hours</h2>
         <p>Weekdays 7:00am - 7:00pm</p>
