updates filter section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section class="filters">
     <div class="filter-head">
       <span id="filter-result">7 dealers in 28226</span>
-      <span class="filter mobile-filter">Filter Results &#x25BE;</span>
+      <a class="filter mobile-filter" href="#">Filter Results &#x25BE;</a>
       <span class="filter desktop-filter">Filter Results</span>
     </div>
     <div class="filter-form">
