--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
     </div>
     <div class="filter-form">
       <form>
-        <input type="checkbox"><label>Service</label><br>
-        <input type="checkbox"><label>Installation</label><br>
-        <input type="checkbox"><label>Residential</label><br>
-        <input type="checkbox"><label>Commercial</label>
+        <span class="question-filter-box"><input type="checkbox"><label>Service</label></span><br>
+        <span class="question-filter-box"><input type="checkbox"><label>Installation</label></span><br>
+        <span class="question-filter-box"><input type="checkbox"><label>Residential</label></span><br>
+        <span class="question-filter-box"><input type="checkbox"><label>Commercial</label></span>
+        <span><img class="question" src="./resources/images/tool-tip-icon-filtering.png" align="middle"></span>
       </form>
     </div>
   </section>
@@ -110,10 +111,10 @@
         </div>
         <div>
           <div class="service">
-            <span><img src="./resources/images/home-residential-pro.png" align="middle"> Residential Pro</span>
+            <span><img src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
           </div>
           <div class="service">
-            <span class="hidden"><img src="./resources/images/gear-service-pro.png" align="middle"> Service Pro</span>
+            <span class="hidden"><img src="./resources/images/gear-residential-pro.png" align="middle"> Residential Pro</span>
           </div>
         </div>
       </div>
