--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </nav>
     <div class="desktop-top">
-      <div class="desktop-top contain">
+      <div class="container">
         <ul>
           <li>Dealers and Distributors</li>
           <li>Commercial Service</li>
@@ -79,7 +79,7 @@
   <!-- Main Section Results -->
   <main>
     <!-- Business 1 -->
-    <div class="business busy">
+    <div class="business aqua-experts">
       <h1>Aqua Experts</h1><br>
       <a class="click-to-call" href="tel:+1-888-888-8888"><div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
@@ -164,7 +164,7 @@
     </div>
 
     <!-- Business 3 -->
-    <div class="business last busy">
+    <div class="business last pool-specialists">
       <h1>Carolina Pool Specialists</h1><br>
       <a class="click-to-call" href="tel:+1-888-888-8888"><div class="mobile-phone phone">
         <img src="./resources/images/phone-icon-mobile.png">
@@ -206,9 +206,8 @@
     </div>
   </main>
 
-<!-- The Modal -->
-<div id="myModal" class="modal">
-    <!-- Modal content -->
+<!-- Contact Modal for Business -->
+<div id="contactModal" class="modal">
   <div class="modal-content">
     <span class="close">&times;</span>
     <div class="modal-title">
@@ -264,15 +263,11 @@
       <p class="mobile-footer-text" id="p-border">Dealers and Distrubutors | Commercial Service</p>
       <p>2017 Pool Pros | Privacy Policy | Terms and Conditions</p>
     </div>
-    <div>
-
-    </div>
   </footer>
 
   <!-- JavaScripts -->
   <script src="./resources/js/jquery-2.1.4.min.js"></script>
-  <script src="./resources/js/plugin.js"></script>
-  <script src="./resources/js/custom-one.js"></script>
+  <script src="./resources/js/custom.js"></script>
   <script src="./resources/js/ss-pika.js"></script>
 </body>
 </html>
