converting css to sass
Updated most of the mobile version to sass

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
   <!-- Fonts -->
   <link href="./resources/webfonts/ss-pika.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,800" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
@@ -237,7 +236,7 @@
             <input type="radio" id="question" value="answer_question" name="user_answer"><label class="light" for="news">No</label><br>
           </div>
         </fieldset>
-        <div class="button">
+        <div class="button-container">
           <button type="submit">Send</button>
         </div>
       </div>
