Added Interactivity further SASS updates

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <header>
     <nav class="mobile-nav">
       <img id="pool-logo" src="./resources/images/pool-pros-logo.png">
-      <span class="ss-location"><a href="#">FIND A PRO</a></span>
+      <span class="ss-location"><a href="#main">FIND A PRO</a></span>
       <a class="mobile-menu" href="#"><img id="mobile-menu-button" src="./resources/images/menu-icon-mobile.png"></a>
       <div class="mobile-nav-list-wrapper">
         <a href="#" id="mobile-nav-list-close" class="mobile-nav-list-close">X</a>
         <h3 class="mobile-nav-list-title">MENU</h3>
-        <ul class="mobile-nav-list">
+        <ul class="nav-list mobile-nav-list">
           <li><a href="#">Pools &amp; Spas</a></li>
           <li><a href="#">Supplies</a></li>
           <li><a href="#">Resources</a></li>
@@ -34,8 +34,8 @@
     <div class="desktop-top">
       <div class="container">
         <ul>
-          <li>Dealers and Distributors</li>
-          <li>Commercial Service</li>
+          <a href="http://www.hudsonpooldist.com/" target="_blank"><li>Dealers and Distributors</li></a>
+          <a href="http://americanpool.com/services/pool-maintenance-services/" target="_blank"><li>Commercial Service</li></a>
         </ul>
       </div>
     </div>
@@ -43,12 +43,12 @@
       <nav class="desktop-nav">
         <img id="pool-logo" src="./resources/images/pool-pros-logo.png">
         <div class="menu">
-          <ul class="main-nav">
+          <ul class="nav-list main-nav">
             <li><a href="#">Pools &amp; Spas</a></li>
             <li><a href="#">Supplies</a></li>
             <li><a href="#">Resources</a></li>
             <li id="sign-in"><a href="#">Services</a></li>
-            <li><span class="ss-location"><a href="#">Find a Pool Pro</a></span></li>
+            <li id="find-pro"><a href="#main"><span class="ss-location">Find a Pool Pro</span></a></li>
           </ul>
       </nav>
     </div>
@@ -76,7 +76,7 @@
   </section>
 
   <!-- Main Section Results -->
-  <main>
+  <main id="main">
     <!-- Business 1 -->
     <div class="business aqua-experts">
       <h1>Aqua Experts</h1><br>
@@ -252,9 +252,9 @@
       <div class="social">
         <span>CONNECT WITH US</span>
         <div class="icons">
-          <img src="./resources/images/twitter-icon.png">
-          <img src="./resources/images/facebook-icon.png">
-          <img src="./resources/images/youtube-icon.png">
+          <a href="https://twitter.com/"><img src="./resources/images/twitter-icon.png"></a>
+          <a href="https://facebook.com/"><img src="./resources/images/facebook-icon.png"></a>
+          <a href="https://youtube.com/"><img src="./resources/images/youtube-icon.png"></a>
         </div>
       </div>
     </div>
